# sovereign-sdk

./: .gitignore  Cargo.toml  Readme.md  rollup_config.toml
adapters/celestia/: Cargo.toml
adapters/risc0/: Cargo.toml
adapters/risc0/src/: guest.rs  host.rs  lib.rs
examples/const-rollup-config/src/: lib.rs
examples/demo-nft-module/: Cargo.toml
examples/demo-prover/host/: Cargo.toml
examples/demo-prover/methods/guest/: Cargo.toml
examples/demo-rollup/: Cargo.toml  Makefile  rollup_config.toml
examples/demo-rollup/benches/: rollup_bench.rs  rollup_coarse_measure.rs
examples/demo-rollup/src/: main.rs  test_rpc.rs
examples/demo-simple-stf/: Cargo.toml
examples/demo-stf/: Cargo.toml
examples/demo-stf/src/: app.rs  genesis_config.rs  lib.rs  runtime.rs
examples/demo-stf/src/sov-cli/: native.rs
examples/demo-stf/src/sov-cli/test_data/: tx_blob
examples/demo-stf/src/tests/: mod.rs
full-node/db/sov-db/: Cargo.toml
full-node/sov-ethereum/: Cargo.toml
full-node/sov-ethereum/src/: lib.rs
full-node/sov-sequencer/: Cargo.toml
full-node/sov-stf-runner/: Cargo.toml
full-node/sov-stf-runner/src/: config.rs  ledger_rpc.rs  lib.rs
module-system/module-implementations/examples/sov-election/: Cargo.toml
module-system/module-implementations/examples/sov-value-setter/: Cargo.toml
module-system/module-implementations/integration-tests/: Cargo.toml
module-system/module-implementations/module-template/: Cargo.toml
module-system/module-implementations/module-template/src/: tests.rs
module-system/module-implementations/sov-accounts/: Cargo.toml
module-system/module-implementations/sov-bank/: Cargo.toml
module-system/module-implementations/sov-bank-a/: Cargo.toml
module-system/module-implementations/sov-bank-a/src/: lib.rs  query.rs
module-system/module-implementations/sov-bank-a/tests/: burn_test.rs  create_token_test.rs  transfer_test.rs
module-system/module-implementations/sov-bank-a/tests/helpers/: mod.rs
module-system/module-implementations/sov-blob-storage/: Cargo.toml
module-system/module-implementations/sov-chain-state/: Cargo.toml
module-system/module-implementations/sov-evm/: Cargo.toml
module-system/module-implementations/sov-evm/src/: call.rs  dev_signer.rs  lib.rs  query.rs
module-system/module-implementations/sov-evm/src/evm/: conversions.rs  db.rs  executor.rs  mod.rs  tests.rs  transaction.rs
module-system/module-implementations/sov-evm/src/tests/: call_tests.rs  tx_tests.rs
module-system/module-implementations/sov-prover-incentives/: Cargo.toml
module-system/module-implementations/sov-sequencer-registry/: Cargo.toml
module-system/module-schemas/: Cargo.toml
module-system/module-schemas/schemas/: sov-evm.json
module-system/sov-cli/: Cargo.toml
module-system/sov-modules-api/: Cargo.toml
module-system/sov-modules-api/src/: default_signature.rs
module-system/sov-modules-macros/: Cargo.toml
module-system/sov-modules-stf-runner/: Cargo.toml
module-system/sov-modules-stf-runner/src/: lib.rs
module-system/sov-modules-stf-template/: Cargo.toml
module-system/sov-modules-stf-template/src/: app_template.rs
module-system/sov-state/: Cargo.toml
module-system/sov-state/src/: codec.rs  map.rs  scratchpad.rs  storage.rs
module-system/utils/sov-data-generators/: Cargo.toml
module-system/utils/sov-data-generators/src/: lib.rs
rollup-interface/src/node/services/: stf_runner.rs
src/const-rollup-config/: Cargo.toml
src/demo-module/: Cargo.toml
src/demo-module/src/: call.rs  genesis.rs  lib.rs  query.rs  token.rs
src/demo-module/tests/: burn_test.rs  create_token_test.rs  freeze_test.rs  mint_test.rs  name_test.rs  transfer_test.rs
src/demo-module/tests/helpers/: mod.rs
src/demo-rollup/: Cargo.toml  Readme.md  rollup_config.toml
src/demo-rollup/src/: main.rs
src/demo-stf/: Cargo.toml
src/demo-stf/src/: app.rs  cli.rs  genesis_config.rs  lib.rs  native.rs  runtime.rs
src/demo-stf/src/sov-cli/: native.rs
src/demo-stf/src/tests/: sov_sli.rs  stf_tests.rs  tx_revert_tests.rs
src/rollup-config/: Cargo.toml
src/sov-bank-a/tests/: freeze_test.rs  mint_test.rs
test-data/: update_name_tx.json
