[workspace]
resolver = "2"
members = [
    "src/const-rollup-config",
    "src/demo-stf",
    "src/demo-rollup",
    "src/sov-bank-a",
]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
publish = false
repository = "https://github.com/sovereign-labs/sovereign-sdk"
rust-version = "1.66"

[workspace.dependencies]
# Dependencies maintained by sovereign
# TODO: replace by release number once available on crates.io: tracking issue https://github.com/Sovereign-Labs/sovereign-sdk/issues/632
jmt = { git = "https://github.com/penumbra-zone/jmt", commit = "46b4b00" }

# External dependencies
async-trait = "0.1.71"
anyhow = "1.0.68"
borsh = { version = "0.10.3", features = ["rc", "bytes"] }
# TODO: Consider replacing this serialization format
#     https://github.com/Sovereign-Labs/sovereign-sdk/issues/283
bincode = "1.3.3"
byteorder = "1.4.3"
bytes = "1.2.1"
hex = "0.4.3"
once_cell = "1.10.0"
prometheus = { version = "0.13.3", default-features = false }
proptest = "1.0.0"
proptest-derive = "0.3.0"
rand = "0.8"
rayon = "1.5.2"
rocksdb = { version = "0.21.0", features = ["lz4"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
sha2 = "0.10.6"
digest = "0.10.6"
thiserror = "1.0.38"
tiny-keccak = "2.0.2"
tracing = "0.1.37"
bech32 = "0.9.1"
derive_more = "0.99.11"
clap = { version = "4.2.7", features = ["derive"] }
toml = "0.7.3"
jsonrpsee = {version = "0.18.2", features = ["jsonrpsee-types"] }
schemars = { version = "0.8.12", features = ["derive"] }
tempfile = "3.5"
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
# See reth: https://github.com/paradigmxyz/reth/blob/main/Cargo.toml#L79
revm = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
revm-primitives = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
