[package]
name = "demo-simple-stf"
version = { workspace = true } 
edition = { workspace = true } 
resolver = "2"
authors = { workspace = true } 
license = { workspace = true } 
homepage = "sovereign.xyz"
publish = false

[dependencies]
anyhow = { workspace = true}
serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", branch = "nightly"  }


[dev-dependencies]
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", branch = "nightly" , features = ["mocks"] }
