[package]
name = "demo-stf"
version = { workspace = true }
edition = { workspace = true }
resolver = "2"
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false

[[bin]]
name = "sov-cli"
path = "src/sov-cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"], optional = true }
tokio = { workspace = true, optional = true }
hex = { workspace = true }
tracing = { workspace = true }


sov-bank-a = { path = "../../module-system/module-implementations/sov-bank-a", default-features = false }

sov-modules-stf-template = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" } # no features available

sov-sequencer-registry = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", default-features = false }
sov-accounts = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", default-features = false }
sov-bank = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", default-features = false }
sov-value-setter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", default-features = false }
sov-blob-storage = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" , default-features = false }
const-rollup-config = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32"  }
sov-election = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" , default-features = false }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", default-features = false, features = ["macros"] }
sov-sequencer = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", optional = true }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", default-features = false }
sov-stf-runner = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" , optional = true }

# Only enable the evm on "experimental" feature
# sov-evm = { path = "../../module-system/module-implementations/sov-evm", default-features = false, optional = true }

[dev-dependencies]
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" , features = ["mocks"] }
sov-data-generators = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }
tempfile = { workspace = true }
rand = "0.8"

[features]
default = ["native"]
experimental = []

native = [
    "sov-bank/native",
    "sov-bank-a/native",
    "sov-accounts/native",
    "sov-election/native",
    "sov-sequencer-registry/native",
    "sov-blob-storage/native",
    "sov-value-setter/native",
    "sov-modules-api/native",
    "sov-rollup-interface/mocks",
    "sov-sequencer",
    "sov-stf-runner",
    "clap",
    "serde_json",
    "jsonrpsee",
    "tokio",
    "toml",
]
verifier = []
