[package]
name = "sov-ethereum"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"

[dependencies]
jsonrpsee = { workspace = true, features = ["http-client", "server"] }

sov-evm = { path = "../../module-system/module-implementations/sov-evm", default-features = false }
demo-stf = { path = "../../examples/demo-stf", features = ["native"] }
sov-modules-api = { path = "../../module-system/sov-modules-api", default-features = false }
const-rollup-config = { path = "../../examples/const-rollup-config" }
jupiter = {  git = "https://github.com/Sovereign-Labs/sovereign-sdk", branch = "nightly", features = ["native"] }

borsh = { workspace = true }
serde_json = { workspace = true }

reth-primitives = { workspace = true }
reth-rpc = { workspace = true }

ethers = { workspace = true }

[dev-dependencies]
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", branch = "nightly", features = ["mocks"] }
tokio = { workspace = true }


[features]
default = ["native"]
experimental = ["demo-stf/experimental", "sov-evm/experimental"]

native = ["demo-stf/native", "sov-evm/native"]