[package]
name = "sov-stf-runner"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"], optional = true }
tokio = { workspace = true, optional = true }
hex = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
tracing-subscriber = "0.3.17"

sov-db = { path = "../db/sov-db" }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.1" }
sov-state = { path = "../../module-system/sov-state", version = "0.1", default-features = false }
sov-modules-api = { path = "../../module-system/sov-modules-api", version = "0.1", default-features = false }
#sov-modules-stf-template = { path = "../../module-system/sov-modules-stf-template", version = "0.1", default-features = false }

jupiter = { path = "../../adapters/celestia" }


[dev-dependencies]
tempfile = { workspace = true }


[features]
default = ["native"]


native = [
    "sov-modules-api/native",
    "serde_json",
    "jsonrpsee",
    "tokio",
    "toml",
]
