[package]
name = "sov-module-schemas"
description = "A dummy crate that stores as files the JSON Schemas for all Sovereign modules"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"

[build-dependencies]
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", features = ["mocks"] }

# Modules
sov-accounts = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }
sov-bank = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }
sov-prover-incentives = { path = "../module-implementations/sov-prover-incentives" }
sov-sequencer-registry = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }
sov-evm = { path = "../module-implementations/sov-evm", features = ["experimental"] }
sov-election = { path = "../module-implementations/examples/sov-election" }
sov-value-setter = { path = "../module-implementations/examples/sov-value-setter" }
