[package]
name = "sov-state"
description = "Defines traits and types for state storage in the Sovereign SDK module system"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", version = "0.1" }
sov-db = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", version = "0.1", optional = true }
sov-first-read-last-write-cache = { path = "../utils/sov-first-read-last-write-cache", version = "0.1" }
jmt = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["native"]
native = ["sov-db"]
