[package]
name = "demo-module"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
resolver = "2"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
clap = { workspace = true, features = ["derive"] }
jsonrpsee = { workspace = true, features = ["macros", "client-core", "server"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", version = "0.1", default-features = false, features = ["macros"] }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", version = "0.1" }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", version = "0.1" }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", version = "0.1" }
tempfile = { workspace = true }
