[package]
name = "demo-stf"
version = { workspace = true }
edition = { workspace = true }
resolver = "2"

[[bin]]
name = "demo-cli"
path = "src/cli.rs"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
tokio = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }


demo-module = { path = "../demo-module" }

sov-modules-stf-template = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }
sov-sequencer-registry = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", default-features = false }
sov-accounts = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }
sov-bank = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", default-features = false }
sov-value-setter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }
sov-blob-storage = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32"  }
sov-election = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", default-features = false, features = ["macros"] }
sov-sequencer = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", default-features = false }
sov-stf-runner = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }

[dev-dependencies]
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" , features = ["mocks"] }
sov-data-generators = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" }
tempfile = { workspace = true }
rand = "0.8"
