[package]
name = "sov-sequencer-registry"
description = "A Sovereign SDK module for registering rollup sequencers"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"

resolver = "2"

[dev-dependencies]
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", version = "0.1" }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" , version = "0.1", features = ["mocks"] }
tempfile = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
sov-bank = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", version = "0.1", default-features = false }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", version = "0.1", default-features = false, features = ["macros"] }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32", version = "0.1", default-features = false }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "6371c32" , version = "0.1" }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
borsh = { workspace = true, features = ["rc"] }
jsonrpsee = { workspace = true, features = ["macros", "client-core", "server"], optional = true }

[features]
default = ["native"]
serde = ["dep:serde", "dep:serde_json"]
native = ["serde", "sov-modules-api/native", "sov-state/native", "sov-bank/native", "dep:jsonrpsee", "dep:schemars", "dep:clap"]
